<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#94000C"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageProfileButton"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/edit_profile"
                android:scaleType="fitCenter"
                android:src="@drawable/profile" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="325dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="325dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="70%"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageButton
                    android:id="@+id/imageAchievementButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/badge"
                    android:scaleType="fitCenter"
                    android:src="@drawable/achievement" />

                <TextView
                    android:id="@+id/textViewBadge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/leader"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageButton
                    android:id="@+id/imageButtonLockedBadge"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/lock"
                    android:scaleType="fitCenter"
                    android:src="@drawable/lock" />

                <TextView
                    android:id="@+id/textViewLockedBadge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Require 30% to unblock"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#531515"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>