<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#7C0303"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#2C0303"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ir.mahozad.android.PieChart
                    android:id="@+id/pieChart"
                    android:layout_width="150dp"
                    android:layout_height="150dp" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_summary_appears_here"
                        android:textColor="#F8F8F8"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/task_completed"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="16dp">


                <TextView
                    android:id="@+id/textViewHistory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="16dp"
                    android:text="@string/history"
                    android:textColor="#ECE1E1"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/textViewCompletedTaskFirst"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Completed Tasks"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

                <ir.mahozad.android.PieChart
                    android:id="@+id/pieChartCompletedTasksFirst"
                    android:layout_width="60dp"
                    android:layout_height="60dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/textViewCompletedTaskSecond"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Completed Tasks"
                    android:textColor="#FBFBFB"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

                <ir.mahozad.android.PieChart
                    android:id="@+id/pieChartCompletedTasksSecond"
                    android:layout_width="60dp"
                    android:layout_height="60dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#040000"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>